# landsat_importer

./: README.md  rioxarray_env.yml  setup.cfg
scripts/: sync.sh
src/landsat_importer/: landsat_7_metadata.py  landsat_89_metadata.py  landsat_metadata.py  landsat_metadata_factory.py  main.py  netcdf4_exporter.py  oli_formats.py  optical_formats.py  processor.py  tiff_importer.py
test/: download_and_import.sh
