[metadata]
name = rioxarray_pipleine_tools
version = attr: landsat_importer.VERSION
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Convert and decode landsat 8/9 scenes to netcdf4
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/landsat_importer
project_urls =
    Bug Tracker = https://github.com/surftemp/landsat_importer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.entry_points]
console_scripts =
    run_landsat_importer = landsat_importer.main:main

[options.packages.find]
where = src
